--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,13 @@
 # limitations under the License.
 
 [metadata]
-name = pyvcloud
-summary = VMware vCloud Director Python SDK
+name = cloudesire-pyvcloud
+packages =
+    cloudesire_pyvcloud
+summary = VMware vCloud Director Python SDK Cloudesire FORK
 description-file =
     README.md
+version = 0.0.3
 author = Paco Gomez
 author_email = pgomez@vmware.com
 url = https://github.com/vmware/pyvcloud
@@ -37,6 +40,6 @@ requires-python = >=3
 
 [files]
 packages =
-  pyvcloud
+  cloudesire_pyvcloud
 data_files =
   . = open_source_license_pyvCloud_20.0.0_GA.txt
