--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,9 @@
 # limitations under the License.
 
 [metadata]
-name = cloudesire-pyvcloud
+name = pyvcloud
 packages =
-    cloudesire_pyvcloud
+    pyvcloud
 summary = VMware vCloud Director Python SDK Cloudesire FORK
 description-file =
     README.md
@@ -40,6 +40,6 @@ requires-python = >=3
 
 [files]
 packages =
-  cloudesire_pyvcloud
+  pyvcloud
 data_files =
   . = open_source_license_pyvCloud_20.0.0_GA.txt
